Fixed Tensor Batchsize issue with padding
-> Does Padding have negative consequences? Maybe renmmove them in the train loop?

--- a/train.ipynb
+++ b/train.ipynb
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 23,
       "metadata": {
         "id": "MrZaWIOKXoUd"
       },
@@ -139,33 +139,50 @@
         "import transformers\n",
         "import torch\n",
         "from torch.utils.data import DataLoader, Dataset\n",
+        "from torch.nn.utils.rnn import pad_sequence\n",
         "from torch.optim import Adam"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.listdir(\"./\")"
-      ],
+      "execution_count": 2,
       "metadata": {
-        "id": "rbGx0tsncS8S",
-        "outputId": "e37c517b-b730-4cf7-93ff-411184c2264e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rbGx0tsncS8S",
+        "outputId": "e37c517b-b730-4cf7-93ff-411184c2264e"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['.config', 'dialogs.txt', 'sample_data']"
+              "['.git',\n",
+              " '.gitignore',\n",
+              " 'API_KEY.txt',\n",
+              " 'archiv',\n",
+              " 'data',\n",
+              " 'data_generation.ipynb',\n",
+              " 'dialogs.txt',\n",
+              " 'executed_commands.pickle',\n",
+              " 'information.pickle',\n",
+              " 'LICENSE.txt',\n",
+              " 'logo.jpeg',\n",
+              " 'model',\n",
+              " 'README.md',\n",
+              " 'stop.exe',\n",
+              " 'stop.py',\n",
+              " 'stop.txt',\n",
+              " 'train.ipynb']"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "os.listdir(\"./\")"
       ]
     },
     {
@@ -179,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 42,
       "metadata": {
         "id": "VFiQ05wnXoUd"
       },
@@ -248,11 +265,37 @@
         "        self.input_ids = self.encoded_data['input_ids']\n",
         "        self.attention_mask = self.encoded_data['attention_mask']\n",
         "\n",
+        "        # set max len of the input and mask -> for padding the data\n",
+        "        MAX_INPUT_LEN = 0\n",
+        "        for cur_i in self.input_ids:\n",
+        "            if len(cur_i) > MAX_INPUT_LEN:\n",
+        "                MAX_INPUT_LEN = len(cur_i)\n",
+        "        self.MAX_INPUT_LEN = MAX_INPUT_LEN\n",
+        "\n",
+        "        MAX_ATTENTION_LEN = 0\n",
+        "        for cur_i in self.attention_mask:\n",
+        "            if len(cur_i) > MAX_ATTENTION_LEN:\n",
+        "                MAX_ATTENTION_LEN = len(cur_i)\n",
+        "        self.MAX_ATTENTION_LEN = MAX_ATTENTION_LEN\n",
+        "\n",
         "    def __len__(self):\n",
         "        return len(self.data)\n",
         "\n",
         "    def __getitem__(self, idx):\n",
-        "        return (self.input_ids[idx], self.attention_mask[idx])\n",
+        "        # transform to tensor\n",
+        "        input_ = torch.Tensor(self.input_ids[idx])\n",
+        "        attention_mask_ = torch.Tensor(self.attention_mask[idx])\n",
+        "\n",
+        "        # add padding, that every batch have the same size\n",
+        "        padding_input = self.MAX_INPUT_LEN - len(input_)\n",
+        "        padding_attention_mask = self.MAX_ATTENTION_LEN - len(attention_mask_)\n",
+        "        if padding_input > 0:\n",
+        "            input_ = torch.cat((input_, torch.zeros(padding_input)))\n",
+        "        if padding_attention_mask > 0:\n",
+        "            attention_mask_ = torch.cat((attention_mask_, torch.zeros(padding_attention_mask)))\n",
+        "        return (input_, attention_mask_)\n",
+        "\n",
+        "        # ALT:\n",
         "        # conversation = self.conversations[idx]\n",
         "        # inputs = self.tokenizer.encode(conversation, max_length=self.max_length, truncation=True, return_tensors=\"pt\")\n",
         "\n",
@@ -263,24 +306,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 30,
       "metadata": {
-        "id": "2ONd2dOaXoUe",
-        "outputId": "fcee2ae0-fdaa-4378-9372-8040da0cebd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2ONd2dOaXoUe",
+        "outputId": "fcee2ae0-fdaa-4378-9372-8040da0cebd2"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
+          "execution_count": 30,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -293,15 +336,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 43,
       "metadata": {
         "id": "r2qOzeAAXoUe"
       },
       "outputs": [],
       "source": [
-        "data = Dialog_Data(tokenizer=tokenizer, read_one_file=True)\n",
-        "data = DataLoader(data, batch_size=1)\n",
+        "data = Dialog_Data(tokenizer=tokenizer, read_one_file=False)\n",
+        "data = DataLoader(data, batch_size=64)\n",
         "#  make the batch-size bigger, 64, 128"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test_tensor = data.dataset.input_ids[3]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([0., 0., 0., 0., 0.])"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "torch.zeros(5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test_tensor.append(torch.zeros(5))"
       ]
     },
     {
@@ -332,34 +413,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 44,
       "metadata": {
-        "id": "tAGX1Qq8XoUe",
-        "outputId": "f519b2f8-94f6-4d97-c978-870ae8e5f3bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tAGX1Qq8XoUe",
+        "outputId": "f519b2f8-94f6-4d97-c978-870ae8e5f3bb"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "[tensor([50258]), tensor([13610]), tensor([502]), tensor([257]), tensor([3748]), tensor([14333]), tensor([1621]), tensor([284]), tensor([9480]), tensor([351]), tensor([262]), tensor([7243]), tensor([25]), tensor([10692]), tensor([13]), tensor([220]), tensor([50260]), tensor([10910]), tensor([11]), tensor([262]), tensor([9151]), tensor([13]), tensor([8013]), tensor([257]), tensor([5909]), tensor([11]), tensor([384]), tensor([25924]), tensor([1295]), tensor([13]), tensor([13872]), tensor([534]), tensor([2951]), tensor([329]), tensor([257]), tensor([2589]), tensor([290]), tensor([1011]), tensor([257]), tensor([2769]), tensor([8033]), tensor([11]), tensor([34140]), tensor([262]), tensor([36021]), tensor([21212]), tensor([286]), tensor([262]), tensor([5417]), tensor([13]), tensor([2735]), tensor([11]), tensor([4286]), tensor([3511]), tensor([5055]), tensor([319]), tensor([257]), tensor([4950]), tensor([44039]), tensor([10481]), tensor([11]), tensor([262]), tensor([23125]), tensor([286]), tensor([262]), tensor([10861]), tensor([4252]), tensor([15241]), tensor([534]), tensor([4168]), tensor([13]), tensor([1680]), tensor([345]), tensor([1254]), tensor([340]), tensor([30]), tensor([220]), tensor([50259])]\n",
-            "<class 'list'>\n",
-            "[tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1]), tensor([1])]\n",
-            "<class 'list'>\n"
+            "tensor([[5.0258e+04, 1.3610e+04, 5.0200e+02,  ..., 0.0000e+00, 0.0000e+00,\n",
+            "         0.0000e+00],\n",
+            "        [5.0258e+04, 7.9000e+03, 1.1000e+01,  ..., 0.0000e+00, 0.0000e+00,\n",
+            "         0.0000e+00],\n",
+            "        [5.0258e+04, 3.3630e+03, 1.1000e+01,  ..., 0.0000e+00, 0.0000e+00,\n",
+            "         0.0000e+00],\n",
+            "        ...,\n",
+            "        [5.0258e+04, 1.6350e+03, 5.1000e+01,  ..., 0.0000e+00, 0.0000e+00,\n",
+            "         0.0000e+00],\n",
+            "        [5.0258e+04, 9.2100e+02, 3.8900e+02,  ..., 0.0000e+00, 0.0000e+00,\n",
+            "         0.0000e+00],\n",
+            "        [5.0258e+04, 1.3610e+04, 5.0200e+02,  ..., 0.0000e+00, 0.0000e+00,\n",
+            "         0.0000e+00]])\n",
+            "<class 'torch.Tensor'>\n",
+            "tensor([[1., 1., 1.,  ..., 0., 0., 0.],\n",
+            "        [1., 1., 1.,  ..., 0., 0., 0.],\n",
+            "        [1., 1., 1.,  ..., 0., 0., 0.],\n",
+            "        ...,\n",
+            "        [1., 1., 1.,  ..., 0., 0., 0.],\n",
+            "        [1., 1., 1.,  ..., 0., 0., 0.],\n",
+            "        [1., 1., 1.,  ..., 0., 0., 0.]])\n",
+            "<class 'torch.Tensor'>\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
+          "execution_count": 44,
           "metadata": {},
-          "execution_count": 23
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -389,22 +488,22 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "eSDnf19QXoUe",
-        "outputId": "6e3a041b-1c17-4258-e839-4785647e2da7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eSDnf19QXoUe",
+        "outputId": "6e3a041b-1c17-4258-e839-4785647e2da7"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Embedding(50261, 768)"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -428,16 +527,16 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "uQvjlRZXXoUf",
-        "outputId": "6bcd1a53-6d3c-441f-ceb9-fb2f9cc0c475",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uQvjlRZXXoUf",
+        "outputId": "6bcd1a53-6d3c-441f-ceb9-fb2f9cc0c475"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/transformers/generation/utils.py:1473: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use and modify the model generation configuration (see https://huggingface.co/docs/transformers/generation_strategies#default-text-generation-configuration )\n",
             "  warnings.warn(\n",
@@ -446,8 +545,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Encoding: tensor([[16447,   502,   281, 14333,  1621,   284,  9480,   502,   866,    13]])\n",
             "\n",
@@ -491,18 +590,18 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "hqc6pXHvXoUf",
-        "outputId": "c210b6a7-9fda-469f-9fc1-33986cbce4a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "hqc6pXHvXoUf",
+        "outputId": "c210b6a7-9fda-469f-9fc1-33986cbce4a4"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "AttributeError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
@@ -730,6 +829,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -746,9 +848,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.1"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
