fixed end token

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -279,8 +279,8 @@
     "        if \"<bot>:\" in output:\n",
     "            output = output.split(\"<bot>:\")[1:]\n",
     "\n",
-    "        if \"<endofstring>\" in output:\n",
-    "            output = output.replace(\"<endofstring>\", \"\")\n",
+    "        if \"<end>\" in output:\n",
+    "            output = output.replace(\"<end>\", \"\")\n",
     "\n",
     "        if \"<pad>\" in output:\n",
     "            output = output.replace(\"<pad>\", \"\")\n",
